examples/failing/xhr/manager.js
/home/dvv/node_modules/Socket.IO-node/lib/manager.js